# linux-agent-island

./: .gitignore  README.md  linux-agent-island-architecture.html  pyproject.toml  run.sh  session.md
.hermes/plans/: 2026-04-18_185100-codex-cli-ui.md
docs/: desktop-app.md
linux_agent_island/: __init__.py  backend.py  cli.py  codex_accounts.py  frontend.py  hooks.py
linux_agent_island/app/: __init__.py  backend.py  frontend.py  frontend_client.py  frontend_controls.py  frontend_interactions.py  frontend_panel.py  frontend_presenter.py  frontend_settings.py  frontend_windowing.py  hotkeys.py  tray.py
linux_agent_island/core/: __init__.py  config.py  models.py  session_reducer.py  store.py
linux_agent_island/providers/: __init__.py  base.py  claude.py  codex.py  codex_rollout.py  gemini.py  utils.py
linux_agent_island/runtime/: agent_events.py  events.py  process_matching.py  processes.py  restore.py  session_cache.py
linux_agent_shell/: __init__.py  backend.py  config.py  frontend.py  hooks.py  logging_utils.py  models.py  store.py
linux_agent_shell/providers/: __init__.py  claude.py  codex.py
scripts/: install-user-app.sh  run-dev.sh
tests/: test_agent_events.py  test_backend_codex_accounts.py  test_claude_provider.py  test_cli.py  test_codex_accounts.py  test_codex_provider.py  test_config.py  test_events.py  test_frontend_helpers.py  test_gemini_provider.py  test_hooks.py  test_hotkeys.py  test_logging_utils.py  test_processes.py  test_restore.py  test_run_script.py  test_session_cache.py  test_store.py  test_user_service.py
(+13 files in other folders)
