[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-agent-island"
version = "0.1.0"
description = "Linux floating island for Claude Code and Codex CLI sessions"
requires-python = ">=3.10"

[project.scripts]
linux-agent-island = "linux_agent_island.cli:main"
linux-agent-island-backend = "linux_agent_island.app.backend:main"
linux-agent-island-frontend = "linux_agent_island.app.frontend:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["linux_agent_island*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
